--- a/.github/workflows/WithoutPackets.yml
+++ b/.github/workflows/WithoutPackets.yml
@@ -22,12 +22,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install -r DemoProject/requirements.txt
 
       - name: Run unit tests
         run: |
           cd DemoProject/
-          pytest 
+          python3 test_runner.py
 
 
