CG - Fix 'requirements' file name problem. - 2

--- a/.github/workflows/WithPackets.yml
+++ b/.github/workflows/WithPackets.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Run unit tests
         run: |
-          cd DemoProject/
+          cd DemoProject/tests
           pytest 
 
