--- a/.github/workflows/WithoutPackets.yml
+++ b/.github/workflows/WithoutPackets.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          cd DemoProject/
+          cd DemoProject/tests
           python3 test_runner.py
 
 
