--- a/GithubActions/SelfHostedDeployment.yaml
+++ b/GithubActions/SelfHostedDeployment.yaml
@@ -1,12 +1,9 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: k8s-action-runner
-  namespace: actions-runner-system
+  name: example-runnerdeploy
 spec:
   replicas: 1
   template:
     spec:
-      repository: <Repository Name>
-      labels:
-        – "actions_runner_dev"
+      repository: cenkkg/GithubActionsDemo
