Change 'runs-on' of workflow option.

--- a/.github/workflows/DummyTests.yaml
+++ b/.github/workflows/DummyTests.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     name: Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Dummy GitHub Actions Test
         run: |
