CG - Fix Service Name problem in SonarQube yaml. - 1

--- a/.github/workflows/SonarQube.yaml
+++ b/.github/workflows/SonarQube.yaml
@@ -34,10 +34,10 @@ jobs:
         run: |
           cd DemoProject/tests
           python3 test_runner.py
-          
+
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
-          SONAR_TOKEN: sonar.allowPermissionManagementForProjectAdmins
-          SONAR_HOST_URL: http://sonarqube-service.default.svc.cluster.local
+          SONAR_TOKEN: "sonar.allowPermissionManagementForProjectAdmins"
+          SONAR_HOST_URL: "http://sonarqube-service.default.svc.cluster.local"
 
