--- a/.github/workflows/WithoutPackets.yml
+++ b/.github/workflows/WithoutPackets.yml
@@ -1,4 +1,4 @@
-name: Python Unit Tests With GitHub Packets
+name: Python Unit Tests Without GitHub Packets
 on:
   push:
     branches: [ "main" ]
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
