--- a/.github/workflows/PushToACR.yaml
+++ b/.github/workflows/PushToACR.yaml
@@ -1,11 +1,13 @@
-name: Build and Push to ACR
+name: SonarQube Test
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
     branches: [ "main" ]
 
 jobs:
   test:
-    name: Unit Tests
+    name: Build
     runs-on: self-hosted
     steps:
       - name: Checkout code
@@ -23,22 +25,35 @@ jobs:
           python3 -m pip install --upgrade pip
           pip install -r DemoProject/requirements.txt
 
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r DemoProject/requirements.txt
+
       - name: Run unit tests
         run: |
           cd DemoProject/tests
           python3 test_runner.py
 
-      - name: Log in to Azure
+      - name: Install SonarScanner CLI
         run: |
-          az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-          az acr login --name YOUR_ACR_NAME
-        env:
-          AZURE_CLI_DISABLE_CONNECTION_VERIFICATION: 1
+          curl -L -o sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+          unzip sonar-scanner-cli.zip
+          rm sonar-scanner-cli.zip
 
-      - name: Build and push Docker image
+      - name: Run SonarQube Scanner
         run: |
-          # Replace the following with your Dockerfile path and desired image name and tag
-          docker build -t YOUR_ACR_NAME.azurecr.io/your-image-name:latest .
-          docker push YOUR_ACR_NAME.azurecr.io/your-image-name:latest
+          ./sonar-scanner-4.6.2.2472-linux/bin/sonar-scanner \
+            -Dsonar.projectKey=GithubActionsDemo \
+            -Dsonar.host.url=http://sonarqube-service.actions-runner-system.svc.cluster.local:9000 \
+            -Dsonar.login=squ_a444fa29639c55342c20d17753ea528b2d606d58
 
+      - name: Login to Azure Container Registry
+        run: |
+          docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
 
+      - name: Build and Tag Docker Image
+        run: |
+          docker build -t githubActionsDemo:latest .
+          docker tag githubActionsDemo:latest ${{ secrets.ACR_LOGIN_SERVER }}/githubActionsDemo:latest
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/githubActionsDemo:latest
