--- a/.github/workflows/PushToACR.yaml
+++ b/.github/workflows/PushToACR.yaml
@@ -54,6 +54,6 @@ jobs:
 
       - name: Build and Tag Docker Image
         run: |
-          docker build -t githubActionsDemo:latest .
-          docker tag githubActionsDemo:latest ${{ secrets.ACR_LOGIN_SERVER }}/githubActionsDemo:latest
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/githubActionsDemo:latest
+          docker build -t githubactionsdemo:latest .
+          docker tag githubactionsdemo:latest ${{ secrets.ACR_LOGIN_SERVER }}/githubactionsdemo:latest
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/githubactionsdemo:latest
