CG - Fix path of Docker Build command. - 1

--- a/.github/workflows/PushToACR.yaml
+++ b/.github/workflows/PushToACR.yaml
@@ -54,6 +54,7 @@ jobs:
 
       - name: Build and Tag Docker Image
         run: |
+          cd DemoProject
           docker build -t githubactionsdemo:latest .
           docker tag githubactionsdemo:latest ${{ secrets.ACR_LOGIN_SERVER }}/githubactionsdemo:latest
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/githubactionsdemo:latest
