--- a/DemoProject/Dockerfile
+++ b/DemoProject/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:alpine
 WORKDIR .
-COPY requirments.txt requirments.txt
-RUN pip3 install -r requirments.txt
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
 COPY . .
 CMD gunicorn --bind 0.0.0.0:3000 wsgi:app
