--- a/.github/workflows/SeleniumTests.yml
+++ b/.github/workflows/SeleniumTests.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get install libnss3
           sudo apt-get install -y xvfb
           python -m pip install --upgrade pip
 
