--- a/.github/workflows/SeleniumTests.yml
+++ b/.github/workflows/SeleniumTests.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get install libnss3
+          sudo apt-get install -y libnss3 
           sudo apt-get install -y xvfb
           python -m pip install --upgrade pip
 
