--- a/.github/workflows/SeleniumTests.yml
+++ b/.github/workflows/SeleniumTests.yml
@@ -28,9 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libatk1.0-0
-          sudo apt-get install -y libnss3 
-          sudo apt-get install -y xvfb
+          sudo apt-get install -y libatk1.0-0 libatk-bridge2.0-0 libnss3 xvfb
           python -m pip install --upgrade pip
 
       - name: Set up Chrome
