--- a/.github/workflows/SeleniumTests.yml
+++ b/.github/workflows/SeleniumTests.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libcups2 libxkbcommon0 libatk1.0-0 libatk-bridge2.0-0 libnss3 xvfb 
+          sudo apt-get install -y libcups2 libxkbcommon0 libxcomposite1 libatk1.0-0 libatk-bridge2.0-0 libnss3 xvfb 
           python -m pip install --upgrade pip
 
       - name: Set up Chrome
