--- a/.github/workflows/SeleniumTests.yml
+++ b/.github/workflows/SeleniumTests.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@latest
+        with:
+          version: '114.0.0.0'
 
       - name: Start application
         run: |
