--- a/.github/workflows/SeleniumTests.yml
+++ b/.github/workflows/SeleniumTests.yml
@@ -26,10 +26,10 @@ jobs:
           sudo apt-get install -y libpango1.0-0 libpangocairo-1.0-0 libpangoft2-1.0-0 libasound2
           sudo apt-get install -y libcups2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libatk1.0-0 libatk-bridge2.0-0 libnss3 xvfb 
 
-      - name: Set up Chrome
-        uses: browser-actions/setup-chrome@latest
+      - name: Set up Chrome v114
+        uses: browser-actions/setup-chrome@v1
         with:
-          version: '114.0.0.0'
+          chrome-version: 1135580
 
       - name: Start application
         run: |
