--- a/.github/workflows/SonarQube.yaml
+++ b/.github/workflows/SonarQube.yaml
@@ -8,13 +8,10 @@ on:
 jobs:
   test:
     name: Build
-    runs-on: self-hosted
+    runs-on: [self-hosted, actions_runner_all_tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-
-
 
       - name: Install Python and pip
         run: |
