--- a/.github/workflows/WithoutPackets.yml
+++ b/.github/workflows/WithoutPackets.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Unit Tests
-    runs-on: self-hosted
+    runs-on: [self-hosted, actions_runner_unit_tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
